rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h450.8_2013_Name-Operations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h450.8_2013_Name-Operations.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod name_operations {
    extern crate alloc;
    use super::call_hold_operations::MixedExtension;
    use super::manufacturer_specific_service_extension_definition::*;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=256"))]
    pub struct ExtendedName(pub BmpString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    #[non_exhaustive]
    pub enum Name {
        namePresentationAllowed(NamePresentationAllowed),
        namePresentationRestricted(NamePresentationRestricted),
        nameNotAvailable(()),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    #[non_exhaustive]
    pub enum NamePresentationAllowed {
        simpleName(SimpleName),
        extendedName(ExtendedName),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    #[non_exhaustive]
    pub enum NamePresentationRestricted {
        simpleName(SimpleName),
        extendedName(ExtendedName),
        restrictedNull(()),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=50"))]
    pub struct SimpleName(pub OctetString);
}
