rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h460.15_2004_SIGNALLING-CHANNEL-SUSPEND-REDIRECT.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h460.15_2004_SIGNALLING-CHANNEL-SUSPEND-REDIRECT.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod signalling_channel_suspend_redirect {
    extern crate alloc;
    use super::h323_messages::TransportAddress;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct ChannelResumeRequest {
        #[rasn(value("0..=4294967295"), identifier = "randomNumber")]
        pub random_number: u32,
        #[rasn(identifier = "resetH245")]
        pub reset_h245: Option<()>,
    }
    impl ChannelResumeRequest {
        pub fn new(random_number: u32, reset_h245: Option<()>) -> Self {
            Self {
                random_number,
                reset_h245,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct ChannelResumeResponse {}
    impl ChannelResumeResponse {
        pub fn new() -> Self {
            Self {}
        }
    }
    impl std::default::Default for ChannelResumeResponse {
        fn default() -> Self {
            Self {}
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct ChannelSuspendCancel {}
    impl ChannelSuspendCancel {
        pub fn new() -> Self {
            Self {}
        }
    }
    impl std::default::Default for ChannelSuspendCancel {
        fn default() -> Self {
            Self {}
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct ChannelSuspendConfirm {}
    impl ChannelSuspendConfirm {
        pub fn new() -> Self {
            Self {}
        }
    }
    impl std::default::Default for ChannelSuspendConfirm {
        fn default() -> Self {
            Self {}
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct ChannelSuspendRequest {
        #[rasn(identifier = "channelResumeAddress")]
        pub channel_resume_address: SequenceOf<TransportAddress>,
        #[rasn(identifier = "immediateResume")]
        pub immediate_resume: bool,
        #[rasn(identifier = "resetH245")]
        pub reset_h245: Option<()>,
    }
    impl ChannelSuspendRequest {
        pub fn new(
            channel_resume_address: SequenceOf<TransportAddress>,
            immediate_resume: bool,
            reset_h245: Option<()>,
        ) -> Self {
            Self {
                channel_resume_address,
                immediate_resume,
                reset_h245,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct ChannelSuspendResponse {
        #[rasn(identifier = "okToSuspend")]
        pub ok_to_suspend: bool,
        #[rasn(identifier = "channelResumeAddress")]
        pub channel_resume_address: SequenceOf<TransportAddress>,
    }
    impl ChannelSuspendResponse {
        pub fn new(
            ok_to_suspend: bool,
            channel_resume_address: SequenceOf<TransportAddress>,
        ) -> Self {
            Self {
                ok_to_suspend,
                channel_resume_address,
            }
        }
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    #[non_exhaustive]
    pub enum SignallingChannelDataSignallingChannelData {
        channelSuspendRequest(ChannelSuspendRequest),
        channelSuspendResponse(ChannelSuspendResponse),
        channelSuspendConfirm(ChannelSuspendConfirm),
        channelSuspendCancel(ChannelSuspendCancel),
        channelResumeRequest(ChannelResumeRequest),
        channelResumeResponse(ChannelResumeResponse),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct SignallingChannelData {
        #[rasn(identifier = "signallingChannelData")]
        pub signalling_channel_data: SignallingChannelDataSignallingChannelData,
    }
    impl SignallingChannelData {
        pub fn new(signalling_channel_data: SignallingChannelDataSignallingChannelData) -> Self {
            Self {
                signalling_channel_data,
            }
        }
    }
}
