rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h460.19_2013_MEDIA-TRAVERSAL.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h460.19_2013_MEDIA-TRAVERSAL.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod media_traversal {
    extern crate alloc;
    use super::h323_messages::TimeToLive;
    use super::multimedia_system_control::TransportAddress;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct TraversalParameters {
        #[rasn(identifier = "multiplexedMediaChannel")]
        pub multiplexed_media_channel: Option<TransportAddress>,
        #[rasn(identifier = "multiplexedMediaControlChannel")]
        pub multiplexed_media_control_channel: Option<TransportAddress>,
        #[rasn(value("0..=4294967295"), identifier = "multiplexID")]
        pub multiplex_id: Option<u32>,
        #[rasn(identifier = "keepAliveChannel")]
        pub keep_alive_channel: Option<TransportAddress>,
        #[rasn(value("0..=127"), identifier = "keepAlivePayloadType")]
        pub keep_alive_payload_type: Option<u8>,
        #[rasn(identifier = "keepAliveInterval")]
        pub keep_alive_interval: Option<TimeToLive>,
    }
    impl TraversalParameters {
        pub fn new(
            multiplexed_media_channel: Option<TransportAddress>,
            multiplexed_media_control_channel: Option<TransportAddress>,
            multiplex_id: Option<u32>,
            keep_alive_channel: Option<TransportAddress>,
            keep_alive_payload_type: Option<u8>,
            keep_alive_interval: Option<TimeToLive>,
        ) -> Self {
            Self {
                multiplexed_media_channel,
                multiplexed_media_control_channel,
                multiplex_id,
                keep_alive_channel,
                keep_alive_payload_type,
                keep_alive_interval,
            }
        }
    }
}
