rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h460.24_2011-amd1_MEDIA-TRAVERSAL.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h460.24_2011-amd1_MEDIA-TRAVERSAL.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod media_traversal {
    extern crate alloc;
    use super::multimedia_system_control::TransportAddress;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct AlternateAddress {
        #[rasn(value("0..=255"), identifier = "sessionID")]
        pub session_id: u8,
        #[rasn(identifier = "sessionCUI")]
        pub session_cui: Option<Ia5String>,
        #[rasn(identifier = "rtpAddress")]
        pub rtp_address: Option<TransportAddress>,
        #[rasn(identifier = "rtcpAddress")]
        pub rtcp_address: Option<TransportAddress>,
    }
    impl AlternateAddress {
        pub fn new(
            session_id: u8,
            session_cui: Option<Ia5String>,
            rtp_address: Option<TransportAddress>,
            rtcp_address: Option<TransportAddress>,
        ) -> Self {
            Self {
                session_id,
                session_cui,
                rtp_address,
                rtcp_address,
            }
        }
    }
    #[doc = " See Rec. ITU-T H.245"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct AlternateAddresses {
        pub addresses: SequenceOf<AlternateAddress>,
    }
    impl AlternateAddresses {
        pub fn new(addresses: SequenceOf<AlternateAddress>) -> Self {
            Self { addresses }
        }
    }
}
